--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 CLIENT_ENDPOINT = http://localhost:3000
-
 MONGO_URI= mongodb://localhost:27017/lpu-batch-1
 GOOGLE_CLIENT_ID =735204739570-4a3trl8p7dil5i9g3j9thh143ce53qvd.apps.googleusercontent.com
 JWT_SECRET = qwerty
+
+RAZORPAY_KEY_ID = "";
+RAZORPAY_KEY_SECRET = "";
