added subscription type payment using webhooks(testing remaining)

--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ MONGO_URI= mongodb://localhost:27017/lpu-batch-1
 GOOGLE_CLIENT_ID =735204739570-4a3trl8p7dil5i9g3j9thh143ce53qvd.apps.googleusercontent.com
 JWT_SECRET = qwerty
 
-RAZORPAY_KEY_ID = "";
-RAZORPAY_KEY_SECRET = "";
+RAZORPAY_KEY_ID = rzp_test_pQ6JDDZTLOymCO
+RAZORPAY_KEY_SECRET = 2Fg1KSXQaEWLf0u5AO1joesl
+
+RAZORPAY_MONTHLY_PLAN_ID = plan_Qq34yz8MzYdmaH
+RAZORPAY_YEARLY_PLAN_ID = plan_Qq3BHQWlmb3u2N
